# dotfiles

./: .gitignore  .profile  .tmux.conf  .vimrc  README.md  bootstrap.sh  mise.toml  taskfile.yml
.config/mise/: config.toml
.config/nvim/: lazy-lock.json
.config/nvim/lua/config/: keymaps.lua  lazy.lua  options.lua  remaps.lua
.config/nvim_backup/: lazy-lock.json
.config/nvim_bak/: lazy-lock.json
.config/pypoetry/: config.toml  pyproject.toml
.config/tmux/: tmux.conf
.config/uv/: uv-receipt.json
.config/wslu/: baseexec  triggered_time
.config/yadm/: Brewfile  bootstrap
.vim/after/ftplugin/: quarto.vim  tex.vim
.vim/spell/: en.utf-8.add  en.utf-8.add.spl
.vim/ultisnips/: quarto.snippets  tex.snippets
_dotconf/gh/: hosts.yml
_dotconf/nvim/: lazy-lock.json
_dotconf/pypoetry/: config.toml
_dotconf/yadm/: bootstrap
bash/: dot-bash_aliases  dot-bashrc  dot-profile
bash/dot-bashrc.d/: work.bashrc
configs/dot-config/lazygit/: config.yml
configs/dot-config/ruff/: ruff.toml
elephant/dot-config/elephant/: desktopapplications.toml  elephant.toml  files.toml  websearch.toml
hypr/dot-config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf  theme.conf
kitty/dot-config/kitty/: kitty.conf
mise/dot-config/mise/: config.cloud.toml  config.toml  mise.toml
nvim/dot-config/nvim/: lazy-lock.json
scripts/: brew-install.sh  install-docker.sh
tmux/dot-config/tmux/: notes-popup.sh  tmux.conf
tools/tools/: tms.sh
walker/dot-config/walker/: config.toml
waybar/dot-config/waybar/: config.jsonc  mocha.css  nohup.out  style.css
(+67 files in other folders)
