[tool.poetry]
name = "poetry-instance"
version = "2.1.3"
description = ""
authors = []
license = ""
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
poetry = "2.1.3"

[tool.poetry.group.additional.dependencies]
artifacts-keyring = "^0.4.0"
poetry-multiproject-plugin = "^1.8.3"
poetry-plugin-export = "^1.9.0"
poetry-monodeploy-plugin = {git = "https://github.com/peterchristofferholm/poetry-monorepo-deploy.git"}
poetry-polylith-plugin = "^1.36.2"

